More work on creating tables