@@ -18,30 +18,17 @@
  */
 package se.uu.ub.cora.batchrunner.dbstorage;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-import se.uu.ub.cora.connection.SqlConnectionProvider;
+import org.testng.annotations.Test;
 
-public class TableCreatorSpy implements TableCreator {
+public class CoraTableInserterTest {
 
-	public SqlConnectionProvider sqlConnectionProvider;
-	public List<String> sentInTableNames = new ArrayList<>();
-
-	public TableCreatorSpy(SqlConnectionProvider sqlConnectionProvider) {
-		this.sqlConnectionProvider = sqlConnectionProvider;
-	}
-
-	public static TableCreatorSpy usingConnectionProvider(
-			SqlConnectionProvider sqlConnectionProvider) {
-		return new TableCreatorSpy(sqlConnectionProvider);
-	}
-
-	@Override
-	public List<String> createTables(List<String> tableNames) {
-		sentInTableNames.addAll(tableNames);
-		return Collections.emptyList();
+	@Test
+	public void testInit() {
+		TableInserter inserter = new CoraTableInserter();
+		List<String> recordTypes = List.of("person", "organisation", "project");
+		inserter.insertIntoTables(null);
 	}
 
 }
